bugfix in utility gap classes

--- a/src/sass/utilities/_others.scss
+++ b/src/sass/utilities/_others.scss
@@ -24,5 +24,5 @@
 }
 
 .u-gap-bottom {
-    margin-top: 30px;
+    margin-bottom: 30px;
 }
